--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/calculator webglbuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/calculator webglbuild.data.gz",
-        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js.gz",
-        codeUrl: buildUrl + "/calculator webglbuild.wasm.gz",
+        dataUrl: buildUrl + "/calculator webglbuild.data",
+        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js",
+        codeUrl: buildUrl + "/calculator webglbuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vaddadi Sree Vamsi",
         productName: "BODMAS Calculator",
