--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var warningBanner = document.querySelector("#unity-warning");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -56,12 +50,13 @@
         updateBannerVisibility();
       }
 
+      // Update the build URL with ".gz" versions of files
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/calculator webglbuild.loader.js";
+      var loaderUrl = buildUrl + "/calculator webglbuild.loader.js.gz";
       var config = {
-        dataUrl: buildUrl + "/calculator webglbuild.data",
-        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js",
-        codeUrl: buildUrl + "/calculator webglbuild.wasm",
+        dataUrl: buildUrl + "/calculator webglbuild.data.gz",
+        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js.gz",
+        codeUrl: buildUrl + "/calculator webglbuild.wasm.gz", // Optional: If you are using compression for .wasm
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vaddadi Sree Vamsi",
         productName: "BODMAS Calculator",
@@ -69,15 +64,8 @@
         showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
+      // Check for mobile devices and update viewport for scaling
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
