--- a/index.html
+++ b/index.html
@@ -1,91 +1,68 @@
-<!DOCTYPE html>
+
+Conversation opened. 1 read message.
+
+Skip to content
+Using Gmail with screen readers
+index.html 
+
+3 of 16
+HTML
+Inbox
+
+Akshay B <akshay.law35@gmail.com>
+Attachments
+Tue, Jun 13, 2023, 3:39 PM
+to me
+
+
+ One attachment
+  •  Scanned by Gmail
+<!doctype html>
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | BODMAS Calculator</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Unity WebGL Player | Fresh_Amphi</title>
     <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="TemplateData/ReadyPlayerMe/RpmStyle.css"><!-- Required for RPM Web Creator -->
+    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+<style>
+      #main-streaming {
+        display: none;
+    }
+    </style>
+
   </head>
-  <body>
-    <div id="unity-container">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
+  <body >
+  <div id="unity-container" class="unity-desktop">
+    <div id="canvas-wrap" >
+      <!-- rpm-container div and contents required for RPM Web Creator -->
+      <div id="rpm-container">
+        <iframe id="rpm-frame" class="rpm-frame" allow="camera *; microphone *"></iframe>
+        <button id="rpm-hide-button" onclick="hideRpm()">Hide</button>
       </div>
-      <div id="unity-warning"> </div>
+      <!-- rpm-container div and contents required for RPM Web Creator -->
+      <canvas id="unity-canvas" ></canvas>
     </div>
-    <script>
-      window.addEventListener("load", function () {
-        if ("serviceWorker" in navigator) {
-          navigator.serviceWorker.register("ServiceWorker.js");
-        }
-      });
-
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var warningBanner = document.querySelector("#unity-warning");
-
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
-
-      // Update the build URL with ".gz" versions of files
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/calculator webglbuild.loader.js.gz";
-      var config = {
-        dataUrl: buildUrl + "/calculator webglbuild.data.gz",
-        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js.gz",
-        codeUrl: buildUrl + "/calculator webglbuild.wasm.gz", // Optional: If you are using compression for .wasm
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Vaddadi Sree Vamsi",
-        productName: "BODMAS Calculator",
-        productVersion: "0.1",
-        showBanner: unityShowBanner,
-      };
-
-      // Check for mobile devices and update viewport for scaling
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-    </script>
+  <div id="unity-loading-bar">
+    <div id="unity-logo"></div>
+    <div id="unity-progress-bar-empty">
+      <div id="unity-progress-bar-full"></div>
+    </div>
+  </div>
+  <div id="unity-warning"> </div>
+  <div id="unity-footer" style="">
+    <div id="unity-webgl-logo"></div>
+    <div id="unity-fullscreen-button"></div>
+    <div id="unity-build-title">Fresh_Amphi</div>
+  </div>
+<script src="https://pwcaudiocall01.azurewebsites.net/streaming/v3/voice-stream.js"></script>
+</div>
+    <script src="TemplateData/ReadyPlayerMe/RpmGlobal.js"></script> <!-- Required for RPM Web Creator -->
+    <script src="TemplateData/Global.js"></script>
+    <script src="TemplateData/UnitySetup.js"></script>
+    <script src="TemplateData/ReadyPlayerMe/ReadyPlayerMeFrame.js"></script>  <!-- Required for RPM Web Creator -->
   </body>
 </html>
+index.html
+Displaying index.html.
