--- a/index.html
+++ b/index.html
@@ -1,50 +1,1 @@
-
-<!doctype html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Fresh_Amphi</title>
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="stylesheet" href="TemplateData/ReadyPlayerMe/RpmStyle.css"><!-- Required for RPM Web Creator -->
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-<style>
-      #main-streaming {
-        display: none;
-    }
-    </style>
-
-  </head>
-  <body >
-  <div id="unity-container" class="unity-desktop">
-    <div id="canvas-wrap" >
-      <!-- rpm-container div and contents required for RPM Web Creator -->
-      <div id="rpm-container">
-        <iframe id="rpm-frame" class="rpm-frame" allow="camera *; microphone *"></iframe>
-        <button id="rpm-hide-button" onclick="hideRpm()">Hide</button>
-      </div>
-      <!-- rpm-container div and contents required for RPM Web Creator -->
-      <canvas id="unity-canvas" ></canvas>
-    </div>
-  <div id="unity-loading-bar">
-    <div id="unity-logo"></div>
-    <div id="unity-progress-bar-empty">
-      <div id="unity-progress-bar-full"></div>
-    </div>
-  </div>
-  <div id="unity-warning"> </div>
-  <div id="unity-footer" style="">
-    <div id="unity-webgl-logo"></div>
-    <div id="unity-fullscreen-button"></div>
-    <div id="unity-build-title">Fresh_Amphi</div>
-  </div>
-<script src="https://pwcaudiocall01.azurewebsites.net/streaming/v3/voice-stream.js"></script>
-</div>
-    <script src="TemplateData/ReadyPlayerMe/RpmGlobal.js"></script> <!-- Required for RPM Web Creator -->
-    <script src="TemplateData/Global.js"></script>
-    <script src="TemplateData/UnitySetup.js"></script>
-    <script src="TemplateData/ReadyPlayerMe/ReadyPlayerMeFrame.js"></script>  <!-- Required for RPM Web Creator -->
-  </body>
-</html>
-index.html
-Displaying index.html.
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.733cc443.js"></script><link href="/static/css/main.49d0d501.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
