--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -60,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/calculator webglbuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/calculator webglbuild.data.unityweb",
-        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/calculator webglbuild.wasm.unityweb",
+        dataUrl: buildUrl + "/calculator webglbuild.data",
+        frameworkUrl: buildUrl + "/calculator webglbuild.framework.js",
+        codeUrl: buildUrl + "/calculator webglbuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vaddadi Sree Vamsi",
         productName: "BODMAS Calculator",
@@ -102,6 +101,3 @@
     </script>
   </body>
 </html>
-=======
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.733cc443.js"></script><link href="/static/css/main.49d0d501.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
->>>>>>> ad629ba9b295fe621835ce00ef4ae2fd73c31c84
